switched exec mode for IN compute tables and modified compute_cron_tasj

--- a/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-credit-transfer.conf
@@ -17,6 +17,8 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/CREDIT_TRANSFER/prequery_completude.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/CREDIT_TRANSFER/prequery_ft_credit_transfer.hql"
 
@@ -25,11 +27,9 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/CREDIT_TRANSFER/compute_and_insert
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_credit_transfer_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_credit_transfer.hql"
 
-
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
-//Prequery variables
 flux.hive.extra-conf += "--hivevar min_files_count=1"
 
