--- a/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
@@ -15,20 +15,30 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
+
+flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/prequery_ft_data_transfer.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=2"
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN as 'cm.orange.bigdata.udf.GetNnpMsisdn'"
+flux.inline.exec-queries += "create temporary function GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_ft_data_transfer.hql"
+
+flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_ft_a_data_transfer.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_data_transfer_activity.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_data_transfer.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
-//Prequery variables
-flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_ADJUSTMENT"
-flux.hive.extra-conf += "--hivevar partition_name=CREATE_DATE"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_ADJUSTMENT_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=20"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
