--- a/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
@@ -1,5 +1,3 @@
-
-
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
@@ -19,9 +17,13 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/prequery_ft_overdraft.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/prequery_completude_overdraft.hql"
 
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "create temporary function FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/compute_and_insert_into_ft_overdraft.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_overdraft_activity.hql"
@@ -31,11 +33,5 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
-//Prequery variables
-//flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_RECHARGE"
-//flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_TRANSFER"
-//flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_AJUSTMENT"
-flux.hive.extra-conf += "--hivevar partition_name=START_DATE"
-flux.hive.extra-conf += "--hivevar date_offset=20"
+/flux.hive.extra-conf += "--hivevar date_offset=20"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
-//flux.hive.extra-conf += "--hivevar cdr_type=ZTE_DATA_CDR"
