--- a/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf
@@ -17,11 +17,24 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/prequery_ft_voice_sms.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/compute_and_insert_into_ft_billed_transaction_prepaid.hql"
 
+flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_BILLED_TRANSACTION_PREPAID PARTITION(TRANSACTION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.post-exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.post-exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.post-exec-queries += "set hive.exec.parallel=true"
+flux.inline.post-exec-queries += "SET hive.exec.reducers.max=2"
+flux.inline.post-exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.post-exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/GSM_TRAFFIC_REVENUE/insert_into_ft_gsm_traffic_revenue_daily.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gsm_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gsm.hql"
@@ -30,8 +43,6 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
-flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_VOICE_SMS"
-flux.hive.extra-conf += "--hivevar partition_name=START_DATE"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_VOICE_SMS_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=7"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
