--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -63,20 +63,19 @@ crontasks +=
   }
 
 // Chargement FT_A IN ZTE SUBCRIPTION
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_SUBSCRIPTION",
-    cron = "55 15 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-subscription.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
+// crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_SUBSCRIPTION",
+//    cron = "55 15 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-subscription.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement FT IN ZTE RECHARGE
 crontasks +=
@@ -139,19 +138,19 @@ crontasks +=
   }
 
 // Chargement FT_A IN ZTE GPRS ACTIVITY
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_GPRS_ACTIVITY",
-    cron = "0 35 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "30 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_GPRS_ACTIVITY",
+//    cron = "0 35 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "30 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement FT IN ZTE DATA_TRANSFER
 crontasks +=
@@ -169,20 +168,19 @@ crontasks +=
   }
 
 // Chargement FT_A IN ZTE DATA_TRANSFER
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_DATA_TRANSFER",
-    cron = "0 35 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_DATA_TRANSFER",
+//    cron = "0 35 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "50 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement FT IN ZTE CREDIT_TRANSFER
 crontasks +=
@@ -215,19 +213,19 @@ crontasks +=
   }
 
 // Chargement FT_A IN ZTE GPRS ACTIVITY POST
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_GPRS_ACTIVITY_POST",
-    cron = "0 50 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity-post.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_GPRS_ACTIVITY_POST",
+//    cron = "0 50 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity-post.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "50 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement FT IN ZTE CONTRACT_SNAPSHOT
 crontasks +=
