--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf
@@ -17,12 +17,14 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/prequery_ft_a_data_transfer.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_ft_a_data_transfer.hql"
 
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_credit_transfer_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_credit_transfer.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_data_transfer_activity.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_data_transfer.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
