--- a/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf
@@ -21,11 +21,15 @@ flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_ft_contract_snapshot.hql"
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/insert_into_ft_contract_snapshot.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_contract_snapshot_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_contract_snapshot.hql"
+flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_CONTRACT_SNAPSHOT PARTITION(EVENT_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
