--- a/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf
@@ -15,25 +15,29 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
+
+flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/prequery_ft_cra_gprs_post.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_cra_gprs_post.hql"
 
-//flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/computer_and_insert_into_ft_a_gprs_activity_post.hql"
-//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gprs_post_activity.hql"
-//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gprs_post.hql"
-
+flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_CRA_GPRS_POST PARTITION(SESSION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/computer_and_insert_into_ft_a_gprs_activity_post.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gprs_post_activity.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gprs_post.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 //Prequery variables
-flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_DATA_POST"
-flux.hive.extra-conf += "--hivevar partition_name=START_DATE"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_DATA_POST_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=20"
 flux.hive.extra-conf += "--hivevar flux_type=POSTPAID"
