--- a/PROD/CONF/IN_ZTE/FT/load-ft-emergency-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-emergency-data.conf
@@ -17,8 +17,14 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_DATA/prequery_ft_emergency_data.hql"
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_DATA/compute_and_insert_into_ft_emergency_data.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_emergency_data_activity.hql"
