--- a/PROD/CONF/IN_ZTE/FT/load-ft-recharge.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-recharge.conf
@@ -17,18 +17,19 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/RECHARGE/prequery_ft_recharge.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/RECHARGE/compute_and_insert_into_ft_recharge.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
-//Prequery variables
-flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_RECHARGE"
-flux.hive.extra-conf += "--hivevar partition_name=PAY_DATE"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_RECHARGE_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=7"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
