--- a/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
@@ -15,21 +15,23 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
+
+flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/prequery_ft_subscription.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_ft_subscription.hql"
 
+flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_ft_a_subscription.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_subsc_activity.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_subsc.hql"
+
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
-// Prequery variables
-
 flux.hive.extra-conf += "--hivevar date_offset=90"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_SUBSCRIPTION_CDR"
-flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_SUBSCRIPTION"
-flux.hive.extra-conf += "--hivevar partition_name=CREATEDDATE"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
