--- a/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-kpi-adjustement.conf
@@ -17,22 +17,23 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.post-query.execution.mode = "HIVE"
+flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_ft_adjustement.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
 
+flux.inline.post-exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.post-exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_adjustement_activity.hql"
 
+flux.inline.post-exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.post-exec-queries += "create temporary function GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_adjustement.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
-//Prequery variables
-flux.hive.extra-conf += "--hivevar table_name=CDR.IT_ZTE_ADJUSTMENT"
-flux.hive.extra-conf += "--hivevar partition_name=CREATE_DATE"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_ADJUSTMENT_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=7"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
