switched exec mode for MSC, EQT_PREPAYEE, ZEBRA and OM compute tables and modified compute_cron_task

--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-prpd-eqt.conf
@@ -1,7 +1,3 @@
-//--***********************************************************---
-//------------ Load FT with cron manager FT_PRPD_EQT-------------
-//---***********************************************************---
-
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
@@ -20,6 +16,8 @@ flux.slice-date-format = "yyyy-MM-dd"
 flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
+
+flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/prequery_ft_prpd_eqt.hql"
 
