--- a/PROD/CONF/MSC/load-ft-x-interco-final.conf
+++ b/PROD/CONF/MSC/load-ft-x-interco-final.conf
@@ -17,8 +17,16 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/MSC/X_INTERCO_FINAL/prequery_completude.hql"
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_FAISEAU_TRUNCK_MSC_HUAWEI as 'cm.orange.bigdata.udf.FaiseauTrunckMscHuawei'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/X_INTERCO_FINAL/compute_and_insert_into_ft_x_interco_final.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
