--- a/PROD/CONF/MVAS/load-ft-qos-special-number.conf
+++ b/PROD/CONF/MVAS/load-ft-qos-special-number.conf
@@ -17,8 +17,13 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/MVAS/prequery_ft_qos_smsc_special_number.hql"
 
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
+flux.inline.exec-queries += "create temporary function GET_INTERVAL_TIME as 'cm.orange.bigdata.udf.GetIntervalTime'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MVAS/compute_and_insert_into_ft_qos_smsc_special_number.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
