--- a/PROD/CONF/MVAS/load-ft-smsc-transaction-a2p.conf
+++ b/PROD/CONF/MVAS/load-ft-smsc-transaction-a2p.conf
@@ -17,9 +17,15 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/MVAS/prequery_ft_smsc_transaction_a2p.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/MVAS/prequery_completude.hql"
 
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "create temporary function FN_FORMAT_MSISDN_TO_9DIGITS as 'cm.orange.bigdata.udf.FormatMsisdnTo9Digits'"
+flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
+flux.inline.exec-queries += "create temporary function FN_GET_NNP_MSISDN_9_DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MVAS/compute_and_insert_into_ft_smsc_transaction_a2p.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
