--- a/PROD/CONF/ZEBRA/FT/load-ft-subs-retail-zebra.conf
+++ b/PROD/CONF/ZEBRA/FT/load-ft-subs-retail-zebra.conf
@@ -6,8 +6,8 @@ flux.name = "LOAD_FT_SUBS_RETAIL_ZEBRA"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -12
-flux.slice-end-value = -7
+flux.slice-begin-value = -14
+flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
@@ -17,9 +17,15 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ZEBRA/prequery_ft_subs_retail_zebra.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ZEBRA/prequery_completude_zebra_transac.hql"
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
 flux.exec-queries += "/PROD/SCRIPTS/FT/ZEBRA/compute_and_insert_into_ft_subs_retail_zebra.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_subsc_retail_zebra_activity.hql"
