--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-edr-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-edr-prpd-eqt.conf
@@ -17,12 +17,12 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/prequery_ft_edr_prpd_eqt.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/prequery_completude_prpd_eqt.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/compute_and_insert_into_ft_edr_prpd_eqt.hql"
-
-//flux.post-exec-queries += "/PROD/SCRIPTS/FT/EQUATION_PREPAYEE/compute_and_insert_into_ft_a_edr_prpd_eqt.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
