--- a/PROD/CONF/MSC/load-ft-ag-interco.conf
+++ b/PROD/CONF/MSC/load-ft-ag-interco.conf
@@ -17,8 +17,18 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/MSC/AG_INTERCO/prequery_completude.hql"
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=256"
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_INTERCO_DESTINATION as 'cm.orange.bigdata.udf.IntercoDestination'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_INTERCO_TRUNCKNAME_DEST as 'cm.orange.bigdata.udf.IntercoTrunckNameDest'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/AG_INTERCO/compute_and_insert_into_ft_ag_interco.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
