--- a/PROD/CONF/MSC/load-ft-msc-transaction.conf
+++ b/PROD/CONF/MSC/load-ft-msc-transaction.conf
@@ -17,8 +17,23 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/MSC/prequery_completude.hql"
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_TRANSACTION_TYPE as 'cm.orange.bigdata.udf.HuaTransactionType'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_SIMPLE_DESTN as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_SUBS_TYPE as 'cm.orange.bigdata.udf.HuaSubsType'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_CALL_TYPE as 'cm.orange.bigdata.udf.HuaCallType'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_CALLER_SUBR as 'cm.orange.bigdata.udf.HuaCallerSubr'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_PARTNER_ID as 'cm.orange.bigdata.udf.HuaPartnerId'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_PARTNER_GT as 'cm.orange.bigdata.udf.HuaPartnerGt'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/compute_and_insert_into_ft_msc_transaction.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
