--- a/PROD/CONF/ZEBRA/FT/load-ft-refill.conf
+++ b/PROD/CONF/ZEBRA/FT/load-ft-refill.conf
@@ -6,8 +6,8 @@ flux.name = "LOAD_FT_REFILL"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -15
-flux.slice-end-value = -5
+flux.slice-begin-value = -14
+flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
@@ -15,12 +15,19 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ZEBRA/prequery_completude_zebra_transac.hql"
+flux.exec-query.execution.mode = "JDBC"
+
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/RECHARGE/prequery_ft_refill.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ZEBRA/prequery_completude_zebra_transac.hql"
 
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "create temporary function GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/RECHARGE/compute_and_insert_into_ft_refill.hql"
+
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_refill_activity.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_refill.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
