load-ft-overdraft error fixed

--- a/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
@@ -33,5 +33,5 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
-/flux.hive.extra-conf += "--hivevar date_offset=20"
+flux.hive.extra-conf += "--hivevar date_offset=20"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
