--- a/PROD/CONF/IN_ZTE/IT/load-it-data.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-data.conf
@@ -17,7 +17,7 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
 flux.exec-query.execution.mode = "JDBC"
 
