Added inline query to drop already existing partitions before insert in new fta table

--- a/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-cra-gprs-post.conf
@@ -29,6 +29,7 @@ flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_cra_gprs_post.hql"
 
 flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_CRA_GPRS_POST PARTITION(SESSION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.post-exec-queries += "DELETE FROM MON. MON.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE = '###SLICE_VALUE###'"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/computer_and_insert_into_ft_a_gprs_activity_post.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gprs_post_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gprs_post.hql"
