--- a/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf
@@ -29,6 +29,7 @@ flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/compute_and_insert_into_ft_billed_transaction_prepaid.hql"
 
 flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_BILLED_TRANSACTION_PREPAID PARTITION(TRANSACTION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
+flux.inline.post-exec-queries += "ALTER TABLE MON.FT_GSM_TRAFFIC_REVENUE_DAILY DROP PARTITION(TRANSACTION_DATE = '###SLICE_VALUE###')"
 flux.inline.post-exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.post-exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.post-exec-queries += "set hive.exec.parallel=true"
