add logic for tables monitoring in conf files

--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-subscription.conf
@@ -21,6 +21,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/prequery_ft_a_sub
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/compute_and_insert_into_ft_a_subscription.hql"
 
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_subsc_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_subsc.hql"
 
@@ -29,5 +30,15 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 // Prequery variables
+
+
+
+flux.hive.extra-conf += "--hivevar table_type=FTA"
+flux.hive.extra-conf += "--hivevar table_name=FT_A_SUBSCRIPTION"
+flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_A_SUBSCRIPTION"
+flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
+
+
 
 
