--- a/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf
@@ -27,6 +27,7 @@ flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/insert_into_ft_contract_snapshot.hql"
 
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_contract_snapshot_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_contract_snapshot.hql"
 flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_CONTRACT_SNAPSHOT PARTITION(EVENT_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
@@ -34,3 +35,12 @@ flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_CONTRACT_SNAPSHOT PARTITI
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+
+
+
+flux.hive.extra-conf += "--hivevar table_type=FT"
+flux.hive.extra-conf += "--hivevar table_name=FT_CONTRACT_SNAPSHOT"
+flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_CONTRACT_SNAPSHOT"
+flux.hive.extra-conf += "--hivevar table_partition=EVENT_DATE"
+
