--- a/PROD/CONF/MSC/load-ft-msc-transaction.conf
+++ b/PROD/CONF/MSC/load-ft-msc-transaction.conf
@@ -35,6 +35,8 @@ flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_PARTNER_ID as 'cm.
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_PARTNER_GT as 'cm.orange.bigdata.udf.HuaPartnerGt'"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/compute_and_insert_into_ft_msc_transaction.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
@@ -43,3 +45,8 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 // Prequery variables
 
 flux.hive.extra-conf += "--hivevar date_offset=90"
+flux.hive.extra-conf += "--hivevar table_type=FT"
+flux.hive.extra-conf += "--hivevar table_name=FT_MSC_TRANSACTION"
+flux.hive.extra-conf += "--hivevar insert_date_column=ft_insert_date"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_MSC_TRANSACTION"
+flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
