--- a/PROD/CONF/ZEBRA/FT/load-ft-refill.conf
+++ b/PROD/CONF/ZEBRA/FT/load-ft-refill.conf
@@ -25,6 +25,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/ZEBRA/prequery_completude_zebra_trans
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "create temporary function GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/RECHARGE/compute_and_insert_into_ft_refill.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_refill_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_refill.hql"
@@ -35,3 +36,9 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 //Prequery variables
 flux.hive.extra-conf += "--hivevar date_offset=7"
+
+flux.hive.extra-conf += "--hivevar table_type=FT"
+flux.hive.extra-conf += "--hivevar table_name=FT_REFILL"
+flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_REFILL"
+flux.hive.extra-conf += "--hivevar table_partition=REFILL_DATE"
