--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf
@@ -23,6 +23,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/prequery_ft_a_data_tr
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_ft_a_data_transfer.hql"
 
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_data_transfer_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_data_transfer.hql"
 
@@ -31,4 +32,11 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 // Prequery variables
+
+flux.hive.extra-conf += "--hivevar table_type=FTA"
+flux.hive.extra-conf += "--hivevar table_name=FT_A_DATA_TRANSFER"
+flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_A_DATA_TRANSFER"
+flux.hive.extra-conf += "--hivevar table_partition=EVENT_DATE"
+
 
