--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf
@@ -21,6 +21,7 @@ flux.has-post-queries = true
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/prequery_ft_a_gprs_activity.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_a_gprs_activity.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gprs_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gprs.hql"
@@ -32,3 +33,12 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 //Prequery variables
 flux.hive.extra-conf += "--hivevar partition_name=START_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=20"
+
+
+flux.hive.extra-conf += "--hivevar table_type=FTA"
+flux.hive.extra-conf += "--hivevar table_name=FT_A_DATA_TRANSFER"
+flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_A_DATA_TRANSFER"
+flux.hive.extra-conf += "--hivevar table_partition=EVENT_DATE"
+
+
