--- a/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
@@ -30,9 +30,12 @@ flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "create temporary function GET_NNP_MSISDN as 'cm.orange.bigdata.udf.GetNnpMsisdn'"
 flux.inline.exec-queries += "create temporary function GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_ft_data_transfer.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 flux.inline.post-exec-queries += "ALTER TABLE MON.FT_A_DATA_TRANSFER DROP PARTITION(TRANSACTION_DATE = '###SLICE_VALUE###')"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_ft_a_data_transfer.hql"
+flux.inline.post-exec-queries += "INSERT INTO FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_A_DATA_TRANSFER' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  MON.FT_A_DATA_TRANSFER WHERE EVENT_DATE='###SLICE_VALUE###')T"
+
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_data_transfer_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_data_transfer.hql"
 
@@ -43,4 +46,13 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_ADJUSTMENT_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=20"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
+
+
+
+flux.hive.extra-conf += "--hivevar table_type=FT"
+flux.hive.extra-conf += "--hivevar table_name=FT_DATA_TRANSFER"
+flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_DATA_TRANSFER"
+flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
+
 
