--- a/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms-post.conf
@@ -28,6 +28,7 @@ flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS_POST/compute_and_insert_into_ft_billed_transaction_postpaid.hql"
 
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_BILLED_TRANSACTION_POSTPAID PARTITION(TRANSACTION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
 flux.inline.post-exec-queries += "ALTER TABLE MON.FT_GSM_TRAFFIC_REVENUE_POST DROP PARTITION(TRANSACTION_DATE = '###SLICE_VALUE###')"
 flux.inline.post-exec-queries += "set hive.vectorized.execution.enabled=true"
@@ -37,6 +38,7 @@ flux.inline.post-exec-queries += "SET hive.exec.reducers.max=1"
 flux.inline.post-exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.post-exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/GSM_TRAFFIC_REVENUE/insert_into_ft_gsm_traffic_revenue_post.hql"
+flux.inline.post-exec-queries += "INSERT INTO FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_GSM_TRAFFIC_REVENUE_POST' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  MON.FT_GSM_TRAFFIC_REVENUE_POST WHERE TRANSACTION_DATE='###SLICE_VALUE###')T"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gsm_post_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gsm_post.hql"
 
@@ -47,4 +49,13 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_VOICE_SMS_POST_CDR"
 flux.hive.extra-conf += "--hivevar date_offset=7"
 flux.hive.extra-conf += "--hivevar flux_type=POSTPAID"
+
+
+
+flux.hive.extra-conf += "--hivevar table_type=FT"
+flux.hive.extra-conf += "--hivevar table_name=FT_BILLED_TRANSACTION_POSTPAID"
+flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_BILLED_TRANSACTION_POSTPAID"
+flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
+
 
