--- a/PROD/CONF/MSC/load-ft-ag-interco.conf
+++ b/PROD/CONF/MSC/load-ft-ag-interco.conf
@@ -30,6 +30,8 @@ flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_INTERCO_DESTINATION as
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_INTERCO_TRUNCKNAME_DEST as 'cm.orange.bigdata.udf.IntercoTrunckNameDest'"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/AG_INTERCO/compute_and_insert_into_ft_ag_interco.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
@@ -38,3 +40,10 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 // Prequery variables
 
 flux.hive.extra-conf += "--hivevar date_offset=90"
+
+flux.hive.extra-conf += "--hivevar table_type=FTA"
+flux.hive.extra-conf += "--hivevar table_name=FT_AG_INTERCO"
+flux.hive.extra-conf += "--hivevar insert_date_column=INSERTED_DATE"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_AG_INTERCO"
+flux.hive.extra-conf += "--hivevar table_partition=SDATE"
+
