--- a/PROD/CONF/MSC/load-ft-x-interco-final.conf
+++ b/PROD/CONF/MSC/load-ft-x-interco-final.conf
@@ -28,6 +28,8 @@ flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_FAISEAU_TRUNCK_MSC_HUAWEI as 'cm.orange.bigdata.udf.FaiseauTrunckMscHuawei'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/X_INTERCO_FINAL/compute_and_insert_into_ft_x_interco_final.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
@@ -36,3 +38,10 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 // Prequery variables
 
 flux.hive.extra-conf += "--hivevar date_offset=90"
+flux.hive.extra-conf += "--hivevar table_type=FTA"
+flux.hive.extra-conf += "--hivevar table_name=FT_X_INTERCO_FINAL"
+flux.hive.extra-conf += "--hivevar insert_date_column=INSERTED_DATE"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_X_INTERCO_FINAL"
+flux.hive.extra-conf += "--hivevar table_partition=SDATE"
+
+
