--- a/PROD/CONF/MVAS/load-ft-qos-special-number.conf
+++ b/PROD/CONF/MVAS/load-ft-qos-special-number.conf
@@ -25,8 +25,18 @@ flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 flux.inline.exec-queries += "create temporary function GET_INTERVAL_TIME as 'cm.orange.bigdata.udf.GetIntervalTime'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MVAS/compute_and_insert_into_ft_qos_smsc_special_number.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+
+flux.hive.extra-conf += "--hivevar table_type=FTA"
+flux.hive.extra-conf += "--hivevar table_name=FT_QOS_SMSC_SPECIAL_NUMBER"
+flux.hive.extra-conf += "--hivevar insert_date_column=insert_date"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_QOS_SMSC_SPECIAL_NUMBER"
+flux.hive.extra-conf += "--hivevar table_partition=state_date"
+
+
 
