--- a/PROD/CONF/MVAS/load-ft-smsc-transaction-a2p.conf
+++ b/PROD/CONF/MVAS/load-ft-smsc-transaction-a2p.conf
@@ -27,6 +27,8 @@ flux.inline.exec-queries += "create temporary function FN_FORMAT_MSISDN_TO_9DIGI
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 flux.inline.exec-queries += "create temporary function FN_GET_NNP_MSISDN_9_DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MVAS/compute_and_insert_into_ft_smsc_transaction_a2p.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
@@ -34,3 +36,11 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 // Prequery variables
 flux.hive.extra-conf += "--hivevar date_offset=32"
+
+flux.hive.extra-conf += "--hivevar table_type=FT"
+flux.hive.extra-conf += "--hivevar table_name=FT_SMSC_TRANSACTION_A2P"
+flux.hive.extra-conf += "--hivevar insert_date_column=insert_date"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_SMSC_TRANSACTION_A2P"
+flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_BILLING_DATE"
+
+
