--- a/PROD/CONF/ZEBRA/FT/load-ft-subs-retail-zebra.conf
+++ b/PROD/CONF/ZEBRA/FT/load-ft-subs-retail-zebra.conf
@@ -27,6 +27,7 @@ flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
 flux.exec-queries += "/PROD/SCRIPTS/FT/ZEBRA/compute_and_insert_into_ft_subs_retail_zebra.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_subsc_retail_zebra_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_subs_retail_zebra.hql"
@@ -39,3 +40,12 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 // Prequery variables
 
 flux.hive.extra-conf += "--hivevar date_offset=90"
+
+flux.hive.extra-conf += "--hivevar table_type=FT"
+flux.hive.extra-conf += "--hivevar table_name=FT_SUBS_RETAIL_ZEBRA"
+flux.hive.extra-conf += "--hivevar insert_date_column=insert_date"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_SUBS_RETAIL_ZEBRA"
+flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
+
+
+
