--- a/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
@@ -32,7 +32,7 @@ flux.inline.exec-queries += "create temporary function GET_OPERATOR_CODE as 'cm.
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_ft_data_transfer.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
-flux.inline.post-exec-queries += "ALTER TABLE MON.FT_A_DATA_TRANSFER DROP PARTITION(TRANSACTION_DATE = '###SLICE_VALUE###')"
+flux.inline.post-exec-queries += "ALTER TABLE MON.FT_A_DATA_TRANSFER DROP PARTITION(EVENT_DATE = '###SLICE_VALUE###')"
 flux.post-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_ft_a_data_transfer.hql"
 flux.inline.post-exec-queries += "INSERT INTO FT_DAILY_STATUS SELECT '###SLICE_VALUE###' TABLE_DATE,'FTA' TABLE_TYPE, 'FT_A_DATA_TRANSFER' TABLE_NAME, NB_ROWS,TABLE_INSERT_DATE,CURRENT_TIMESTAMP INSERT_DATE FROM (SELECT COUNT(*) NB_ROWS,MAX(INSERT_DATE) TABLE_INSERT_DATE FROM  MON.FT_A_DATA_TRANSFER WHERE EVENT_DATE='###SLICE_VALUE###')T"
 
