--- a/PROD/CONF/STREAMING/stream-calc-ft-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-ft-subscription.conf
@@ -17,12 +17,12 @@ flux.output-type = "KAFKA"
 flux.input-file-format = "CSV"
 
 flux.kafka.bootstrap-servers = "edge01.adcm.orangecm:6667,edge02.adcm.orangecm:6667"
-flux.kafka.subscribe = "ft-01-subscription"
+flux.kafka.subscribe = "tmp-ft-01-subscription"
 flux.kafka.security-protocol = "SASL_PLAINTEXT"
 flux.kafka.startingOffsets = "earliest"
 flux.kafka.maxOffsetsPerTrigger = 1000000
 
-flux.kafka.output-topic = "ft-subscription"
+flux.kafka.output-topic = "tmp-ft-subscription"
 flux.kafka.key-expression = "CAST(TRANSACTION_DATE AS STRING) AS key"
 flux.kafka.value-expression = "CAST(VALUE AS STRING) AS value"
 
