--- a/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
@@ -3,8 +3,6 @@ flux.log-level = "INFO"
 
 flux.name = "STR_CALC_FT_A_SUBS"
 
-flux.setup-conf += {"key": "spark.sql.shuffle.partitions", "value": "5"}
-
 flux.streaming-backpressure-enabled = true
 flux.streaming-backpressure-initialRate = 1000
 flux.streaming-backpressure-maxRate = 30000
@@ -20,7 +18,7 @@ flux.kafka.bootstrap-servers = "edge01.adcm.orangecm:6667,edge02.adcm.orangecm:6
 flux.kafka.subscribe = "ft-subscription"
 flux.kafka.security-protocol = "SASL_PLAINTEXT"
 flux.kafka.startingOffsets = "earliest"
-flux.kafka.maxOffsetsPerTrigger = 1000000
+flux.kafka.maxOffsetsPerTrigger = 10
 
 flux.input-schema += {"field": "transaction_date", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
 flux.input-schema += {"field": "transaction_time", "type": "string"}
