Added Java heap space usage

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -27,7 +27,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -42,7 +42,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -57,7 +57,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -72,7 +72,7 @@ crontasks +=
 //    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
 //    timeout = "30 minutes"
 //    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
 //      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
 //    ]
 //  }
@@ -87,7 +87,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -102,7 +102,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -117,7 +117,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -132,7 +132,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -147,7 +147,7 @@ crontasks +=
 //    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
 //    timeout = "30 minutes"
 //    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
 //      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
 //    ]
 //  }
@@ -162,7 +162,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -177,7 +177,7 @@ crontasks +=
 //    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
 //    timeout = "50 minutes"
 //    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
 //      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
 //    ]
 //  }
@@ -192,7 +192,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -207,7 +207,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -222,7 +222,7 @@ crontasks +=
 //    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
 //    timeout = "50 minutes"
 //    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
 //      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
 //    ]
 //  }
@@ -237,7 +237,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -252,7 +252,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -271,7 +271,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -289,7 +289,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -304,7 +304,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "45 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -319,7 +319,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -337,7 +337,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -352,7 +352,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -371,7 +371,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -386,7 +386,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -403,7 +403,7 @@ crontasks +=
 //    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
 //    timeout = "30 minutes"
 //    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
 //      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
 //    ]
 //  }
@@ -418,7 +418,7 @@ crontasks +=
 //    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
 //    timeout = "30 minutes"
 //    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
 //      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
 //    ]
 //  }
@@ -433,7 +433,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -453,7 +453,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -468,7 +468,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
